Alteração do header
Botão "baixar agora"

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <a href="">Conheça o app</a>
                 <a href="">Funcionalidades</a>
                 <a href="">Planos e Preços</a>
-                <a href="">Baixar agora</a>
+                <a class="baixar" href="">Baixar agora</a>
             </nav>
         </div>
     </header>
